# FGPU

./: CMakeLists.txt  CONTRIBUTING.md  README.md
CUDA/async_copy_test/: Makefile  README  cudafortran1.cuf
CUDA/memcheck_error_check/: Makefile  README  kernels.h  main.cc  saxpy.cuf
CUDA/memcheck_line_number_failure/: README  fsubroutine.F90
CUDA/stream_testing/: derived_type_mod.cuf
OpenMP4.5/first_private_clause_not_working/: Makefile
OpenMP4.5/macro_layer/: main.cc  saxpy_omp45_f.F90
OpenMP4.5/omp_assumed_shape_array_failure/: README  saxpy_cuda_c.cu  saxpy_omp45_f.F90
OpenMP4.5/omp_parallel_barrier/: README  test.F90
OpenMP4.5/omp_privatizer_bug/: Makefile  README  double_free.f90
OpenMP4.5/runtime_troubleshooting/: README  out_of_bounds.f90
OpenMP4.5/workshare/: README
cmake/: blueos.cmake  redwood.cmake
commonFiles/: BLT_Basics.cmake
commonFiles/hostConfigs/: redwood.cmake
compiler_test_cases/omp_parallel/: omp_parallel.1a.f90
compiler_test_cases/unified_memory_failure/: README
cuda/cuda_omp45_coexisting/: Makefile  daxpy.cc  kernels.h  main.cc
cuda/pin_c_memory_from_fortran/: pin_memory.f90  test.cpp
cuda/templated_kernel_c/: UTMatrixOperation.cu
cuda_openmp_interoperability/: README
cuda_openmp_interoperability/cuda_omp45_coexisting/: Makefile  main.cc
cuda_openmp_interoperability/nvcc_clang_xlf/: Makefile  README
cuda_openmp_interoperability/use_device_ptr_example/: Makefile
debug_symbols_issues/debug_symbols_c_f_omp/: Makefile  README  saxpy_cuda_f.F90  saxpy_omp45_c.cc  saxpy_omp45_f.F90
debug_symbols_issues/debug_symbols_memcheck/: Makefile  README  saxpy_cuda_f.F90  saxpy_omp45_f.F90
debug_symbols_issues/debug_symbols_xl_nvcc_comparison/: Makefile  README  kernels.h  main.cc
early_compiler_bug_cases/cuda_stream_failure/: Makefile  README  main.F90
early_compiler_bug_cases/first_private_clause_not_working/: mc.f90
early_compiler_bug_cases/omp_assumed_shape_array_failure/: saxpy_cuda_f.cuf
early_compiler_bug_cases/segfault_on_free_of_pinned_memory/: not_pinned.F90  not_pinned_ptr.F90
examples/array_slice_mapping/: Makefile  README  daxpy_array_slices.f90  daxpy_array_slices_v1.c  daxpy_array_slices_v1.f90  daxpy_array_slices_v2.f90  daxpy_array_slices_v3.f90  daxpy_type_ptrs.f90
examples/array_slices/: Makefile  README  daxpy_map_array_slices_inline.f90  daxpy_map_array_slices_upfront.f90  daxpy_update_array_slices.f90  daxpy_update_array_slices_in_type.f90  map_array_slices_in_type.f90  update_array_slices.f90  update_array_slices_in_type.f90
examples/map_function_pointer/: README  map_array_of_function_pointers.F90
host_configs/: blueos.cmake  redwood.cmake
interoperability/: README
interoperability/cuda_omp45_coexisting/: Makefile  kernels.h  main.cc  saxpy.cuf
interoperability/external_allocator_example/: README  kernels.h  main.cc  saxpy_omp45_f.F90
interoperability/nvcc_clang_xlf/: saxpy_omp45_c.cc
interoperability/omp_memory_pool_and_alloc_issues/: Makefile  README  daxpy.cc  daxpy.cu  kernels.h  main.cc
interoperability/omp_memory_pool_and_cuda_alloc/: README  daxpy.cc  daxpy.cu  kernels.h
interoperability/omp_memory_pool_and_cuda_alloc_issues/: Makefile  daxpy.cc
interoperability/omp_memory_pool_issues_with_cuda/: Makefile  daxpy.cu  main.cc
interoperability/omp_use_device_ptr_example/: README
interoperability/use_device_ptr_example/: saxpy_cuda_c.cu
kernel_scaling_tests/: Makefile  README  main.cc  saxpy_cuda_c.cu  saxpy_omp45_f.F90
kernel_scaling_tests/mpi_versions/: README  saxpy_cuda_f.cuf  saxpy_omp45_f.F90
macro_layer/: Makefile  README  macros.h
makefile_tools/: xl.mk
memory_testing/omp45_associate_ptr_testing/: Makefile  README  kernels.h  saxpy_omp45_c.cc
memory_testing/omp45_use_device_ptr/: README  kernels.h  main.cc  main.f90  saxpy_cuda_f.cuf  saxpy_omp45_cuda_c.cc
memory_testing/pinned_mem_testing/: Makefile  pinned.F90  pinned_dealloc.F90
memory_testing/pinned_memory_allocator_class/: Makefile  README  driver.F90  memory_allocators_mod.F90
memory_testing/unified_memory_omp45_testing/: um_omp45_example.F90
mixed_language_trials/: README
mixed_language_trials/cudafor/: cuda2.cuf  cudafortran1.cuf
mixed_language_trials/xl_clang_omp_test/: Makefile  README
mixed_language_trials/xl_nvcc_test/: test_cudafortran.f90
mixed_language_trials/xlc_mixed_mpi/: Makefile  c++_main.cc  fortran_hello.F
mpi/cuda_multi_rank_gpu/: Makefile  kernels.h  main.cc
mpi/device_aware_mpi/: README  setup.f
mpi/openmp_multi_rank_gpu/: Makefile  daxpy.cc  kernels.h  main.cc  saxpy.cu
mpi/persistent_communication/: Makefile  README  test.c  test_omp.c
openmp/: CMakeLists.txt
openmp/common_error_cases/: CMakeLists.txt
openmp/custom_reduction_function/: Makefile  README  max.F90  max.f08
openmp/iso_c_bindings/: openmp_device_memory_routines.F90
openmp/macro_layer/: README
openmp/nonrectangular_loop_nest/: Makefile  test.F03
openmp/omp_conditional_line/: Makefile  README  test.f08  test_debug  test_opt
openmp/omp_memory_pool_and_alloc_issues/: Makefile
openmp/omp_pause_resource/: Makefile  README  daxpy.cc  kernels.h  main.cc  saxpy.cu
openmp/openmp_interface_templating_via_macros/: README  map_functions.F90_template  nested_data.f08
openmp/target_associate_ptr/: README
openmp/target_associate_ptr_under_an_api/: README
openmp/target_map/: CMakeLists.txt
openmp/target_map/derived_types/: CMakeLists.txt  Makefile  README  base_types.f  base_types.f90  main.f  main.f90  operations.f90  setup.f  setup.f90
openmp/write/: Makefile  write.f03
openmp_runtime_error_handling/: CMakeLists.txt
openmp_runtime_error_handling/orphaned_maps_causing_failures/: Makefile
openmp_runtime_error_handling/out_of_bounds_access_error_case/: README
openmp_runtime_error_handling/overlapping_maps_error_case/: CMakeLists.txt
openmp_runtime_error_handling/trapping_errors_via_signal_handling/: README  invalid_map_example.F90  main.cc
partially_supported_constructs/: README
testing/: README
testing/compilers/: README
usability_issues/: README
(+288 files in other folders)
